# amethyst-tutorial

./: Cargo.toml  README.md
assets/mesh/mclaren_mp4-12c/: scene.gltf
assets/prefab/: mclaren_mp4-12c.ron
config/: display.ron
src/: main.rs
