[package]
name = "amethyst-tutorial"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies.amethyst]
version = "0.15.0"
features = ["metal", "gltf"]

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

[dependencies]
amethyst_gltf = "0.10.0"
serde = "1.0.111"
